# neural_networks_from_scratch_rust

./: Cargo.toml  README.md  test.sh
.github/workflows/: rust.yml
chapter02/: Cargo.toml
chapter02/src/: lib.rs  main.rs
chapter03/: Cargo.toml
chapter03/src/: main.rs
chapter04/: Cargo.toml
chapter04/src/: main.rs
chapters/: continue.txt
chapters/chapter02/: Cargo.toml
chapters/chapter02/src/: main.rs
chapters/chapter03/: Cargo.toml
chapters/chapter03/src/: main.rs
chapters/chapter04/: Cargo.toml
chapters/chapter04/src/: main.rs
chapters/chapter05/: Cargo.toml
chapters/chapter05/src/: main.rs
chapters/chapter06/: Cargo.toml
chapters/chapter06/src/: main.rs
datasets/: Cargo.toml
datasets/src/: lib.rs
examples/: basic_training.rs
layers/: Cargo.toml
layers/src/: dense.rs  lib.rs
layers/src/activation/: relu.rs  softmax.rs
math/: Cargo.toml
math/src/: creation.rs  lib.rs  operations.rs
math/src/operations/: add.rs  dot.rs
model/: Cargo.toml
model/src/: layer.rs  lib.rs  loss.rs
model/src/layer/: activation.rs  dense.rs
model/src/layer/activation/: linear.rs  relu.rs  softmax.rs
model/src/loss/: categorical_crossentropy.rs
numpy/: Cargo.toml
numpy/src/: creation.rs  operations.rs
src/: activation.rs  dataset.rs  layer.rs  lib.rs  loss.rs  main.rs  neuron.rs
src/activation/: relu.rs  softmax.rs
src/loss/: categorical_crossentropy.rs
tests/: chapter02.rs  chapter03.rs  chapter04.rs
