[package]
name = "numpy"
version = "0.1.0"
edition = "2021"
description = "A collection of functions needed to keep the neural networks readable."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rayon = "1.6"
